# py_layered_settings

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/layered_settings/: db.py  orm.py
src/multilayer_settings/: orm.py
tests/: conftest.py  random_data.py  test_orm.py
