[tool.poetry]
name = "multilayer-settings"
version = "0.1.0"
description = ""
authors = ["Wilson Santos <wilson.santos.dev87@gmail.com>"]
readme = "README.md"
packages = [{include = "multilayer_settings", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.28"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.1.0"
mypy = "^1.8.0"
pytest = "^8.0.2"
pytest-watch = "^4.2.0"
pytest-testmon = "^2.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
